Fixed table alignment.

--- a/client/src/css/layout.scss
+++ b/client/src/css/layout.scss
@@ -93,7 +93,7 @@ html {
 
 .table-entry-buttons {
     padding: 0;
-    margin-left: 18px;
+    margin-left: 30px;
     margin-right: 18px;
 }
 
@@ -105,8 +105,8 @@ html {
 .button-group {
     height: 100%;
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    // align-items: center;
+    // justify-content: flex-end;
 }
 
 .sidebar-header {
